@@ -50,12 +50,12 @@ This function selects features based on their labels.  To select
 \examples{
 myDfm <- dfm(c("My Christmas was ruined by your opposition tax plan.",
                "Does the United_States or Sweden have more progressive taxation?"),
-             verbose = FALSE)
+             toLower = FALSE, verbose = FALSE)
 mydict <- dictionary(list(countries = c("United_States", "Sweden", "France"),
                           wordsEndingInY = c("by", "my"),
                           notintext = "blahblah"))
 selectFeatures(myDfm, mydict)
-selectFeatures(myDfm, mydict, case_insensitive = TRUE)
+selectFeatures(myDfm, mydict, case_insensitive = FALSE)
 selectFeatures(myDfm, c("s$", ".y"), "keep", valuetype = "regex")
 selectFeatures(myDfm, c("s$", ".y"), "remove", valuetype = "regex")
 selectFeatures(myDfm, stopwords("english"), "keep", valuetype = "fixed")
